k8s/services/manifests/tt-rss/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tt-rss
  labels:
    shared-gateway-access: 'true'
