k8s/services/manifests/tt-rss/tt-rss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:15-alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-storage
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      imagePullSecrets:
        - name: artifact-registry
      containers:
        - name: app
          image: cthulhoo/ttrss-fpm-pgsql-static:59b94a9e
          volumeMounts:
            - mountPath: /var/www/html
              name: app-storage
        - name: updater
          image: cthulhoo/ttrss-fpm-pgsql-static:59b94a9e
          volumeMounts:
            - mountPath: /var/www/html
              name: app-storage
          command: ["/opt/tt-rss/updater.sh"]
        - name: nginx
          image: asia-northeast1-docker.pkg.dev/furonverse/furonverse/ttrss-nginx-image:v0.1.1
          volumeMounts:
            - mountPath: /var/www/html
              name: app-storage
              readOnly: true
          ports:
            - containerPort: 80
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
