k8s/services/manifests/tt-rss/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tt-rss
  namespace: tt-rss
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - ttrss.furonverse.com
  rules:
    - backendRefs:
        - kind: Service
          name: nginx
          port: 80
